Update status code 204 to 404
