# src/swagger.json
@@ -88,8 +88,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content",
+          "404": {
+            "description": "Not Found",
             "content": {
               "application/json": {
                 "example": {
@@ -143,8 +143,8 @@
           }
         },
         "responses": {
-          "204": {
-            "description": "No Content",
+          "404": {
+            "description": "Not Found",
             "content": {
               "application/json": {
                 "example": {
@@ -177,8 +177,8 @@
           }
         ],
         "responses": {
-          "204": {
-            "description": "No Content",
+          "404": {
+            "description": "Not Found",
             "content": {
               "application/json": {
                 "example": {
